Prevent homepage banner overlap

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -1304,7 +1304,7 @@ footer.page-footer {
 
             @include min-screen($screen__m) {
                 justify-content: left;
-                margin-left: 35px;
+                margin-left: 55px;
                 padding: 0;
 
                 .pagebuilder-poster-content {
